Fixed css issues with wrapping labels and text

--- a/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.css
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.css
@@ -1,7 +1,3 @@
-.points .sheetComponentBody {
-  margin-bottom: 0px;
-}
-
 .earned {
   border-top: solid darkgray 1px;
 }
